@@ -1,6 +1,7 @@
 2002-xx-xx v0.xx:
   * Handle invalid References starting with a '.'.
   * Fix --without-zlib build.
+  * Added cachedir config option and NGETCACHE env var.
 
 2002-01-23 v0.16:
   * Print info line about each file before beginning retrieval.
